<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/forms">
        <menu>
            <item
                android:id="@+id/pit"
                android:title="@string/pit"
                android:icon="@drawable/ic_baseline_assignment_24px" />
            <item
                android:id="@+id/match"
                android:title="@string/match"
                android:icon="@drawable/ic_baseline_assignment_24px" />
            <item
                android:id="@+id/concat"
                android:title="@string/concatenate"
                android:icon="@drawable/ic_baseline_assessment_24px" />
        </menu>
    </item>

    <item android:title="@string/bluetooth">
        <menu>
            <item
                android:id="@+id/send_pit_photos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_pit_photos" />
        </menu>
    </item>

    <item android:title="@string/analysis">
        <menu>
            <item
                android:id="@+id/attribute_analysis"
                android:title="@string/attribute_analysis"
                android:icon="@drawable/ic_baseline_assessment_24px" />
        </menu>
    </item>

    <!--<item android:title="@string/advanced">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_baseline_settings_20px" />
        </menu>
    </item>-->

</menu>
