<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/edge_margin"
        android:layout_marginLeft="@dimen/edge_margin"
        android:layout_marginRight="@dimen/edge_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/pit_teamNumber_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pitTeamNumber"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pitSandstormOperationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitSandstormOperation"
            android:textSize="@dimen/label_text_size"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pit_teamNumber_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioGroup
            android:id="@+id/sandstormOperationsRadioQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pitSandstormOperationText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/visionSystemSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/visionSystemSandstorm" />

            <RadioButton
                android:id="@+id/cameraDrivingSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cameraDrivingSandstorm" />

            <RadioButton
                android:id="@+id/blindDrivingSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/blindDrivingSandstorm" />

            <RadioButton
                android:id="@+id/noDrivingSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/noDrivingSandstorm" />
        </RadioGroup>

        <TextView
            android:id="@+id/pitSandstormPreferenceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitSandstormPreference"
            android:textSize="@dimen/label_text_size"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/sandstormOperationsRadioQuestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RadioGroup
            android:id="@+id/sandstormPreferenceRadioQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pitSandstormPreferenceText">

            <RadioButton
                android:id="@+id/rocketshipPreferenceSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rocketshipPreferenceSandstorm" />

            <RadioButton
                android:id="@+id/cargoshipPreferenceSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cargoshipPreferenceSandstorm" />

            <RadioButton
                android:id="@+id/noPreferenceSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/noPreferenceSandstorm" />

        </RadioGroup>

        <TextView
            android:id="@+id/pitRocketLevelSandstormText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitRocketLevelSandstorm"
            android:textSize="@dimen/label_text_size"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/sandstormPreferenceRadioQuestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RadioGroup
            android:id="@+id/highestRocketLevelSandstormRadioQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pitRocketLevelSandstormText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/topRocketLevelSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/topRocketLevelSandstorm" />

            <RadioButton
                android:id="@+id/middleRocketLevelSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/middleRocketLevelSandstorm" />

            <RadioButton
                android:id="@+id/bottomRocketLevelSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bottomRocketLevelSandstorm" />

            <RadioButton
                android:id="@+id/noRocketLevelSandstorm_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/noRocketLevelSandstorm" />
        </RadioGroup>

        <TextView
            android:id="@+id/pitHabitatLevelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitHabitatLevel"
            android:textSize="@dimen/label_text_size"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/highestRocketLevelSandstormRadioQuestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RadioGroup
            android:id="@+id/highestHabitatLevelRadioQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pitHabitatLevelText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/topHabitatLevel_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/topHabitatLevel" />

            <RadioButton
                android:id="@+id/middleHabitatLevel_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/middleHabitatLevel" />

            <RadioButton
                android:id="@+id/bottomHabitatLevel_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bottomHabitatLevel" />

            <RadioButton
                android:id="@+id/noHabitatLevel_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/noHabitatLevel" />
        </RadioGroup>

        <EditText
            android:id="@+id/pit_habitatTime_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pitHabitatLevelTime"
            android:inputType="text"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/highestHabitatLevelRadioQuestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/pitProgrammingLanguageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitprogrammingLanguage"
            android:textSize="@dimen/label_text_size"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pit_habitatTime_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RadioGroup
            android:id="@+id/programmingLanguageRadioQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pitProgrammingLanguageText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/javaProgrammingLanguage_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/javaProgrammingLanguage"/>

            <RadioButton
                android:id="@+id/cppProgrammingLanguage_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cppProgrammingLanguage"/>

            <RadioButton
                android:id="@+id/labviewProgrammingLanguage_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/labviewProgrammingLanguage"/>

            <RadioButton
                android:id="@+id/otherProgrammingLanguage_Radiobtn"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/otherProgrammingLanguage"/>
        </RadioGroup>

        <EditText
            android:id="@+id/pit_bonusQuestion_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pitBonusQuestion"
            android:inputType="text"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/programmingLanguageRadioQuestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/pit_comments_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pit_comments_Text"
            android:inputType="text"
            android:layout_marginTop="@dimen/between_margin"
            app:layout_constraintTop_toBottomOf="@id/pit_bonusQuestion_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_check_24px"
        android:onClick="savePitData" />

</FrameLayout>