<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/endgame_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/edge_margin"
        android:layout_marginTop="@dimen/edge_margin"
        android:layout_marginRight="@dimen/edge_margin">

        <TextView
            android:id="@+id/text_endgame_hab_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endGameHabitatLevelHeading"
            android:textAlignment="center"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_endgame_hab_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_endgame_hab_level">


            <RadioButton
                android:id="@+id/rb_endgame_hab_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/habOneEndGame" />

            <RadioButton
                android:id="@+id/rb_endgame_hab_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/habTwoEndGame" />

            <RadioButton
                android:id="@+id/rb_endgame_hab_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/habThreeEndGame" />

            <RadioButton
                android:id="@+id/rb_endgame_no_hab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/habNoneEndGame" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/chkbx_endgame_defense_all_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_margin"
            android:text="@string/endGameDefenseAllMatch_chkbxText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_endgame_hab_level" />

        <TextView
            android:id="@+id/text_endgame_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_between_margin"
            android:text="@string/endGameDefenseHeading"
            android:textAlignment="center"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkbx_endgame_defense_all_match" />

        <RadioGroup
            android:id="@+id/rg_endgame_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_endgame_defense">

            <RadioButton
                android:id="@+id/rb_endgame_effective_defense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/endGameDefenseEffective" />

            <RadioButton
                android:id="@+id/rb_endgame_ineffective_defense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/endGameDefenseIneffective" />

            <RadioButton
                android:id="@+id/rb_endgame_no_defense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/radiobutton_margin"
                android:layout_weight="1"
                android:text="@string/endGameDefenseNone" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/chkbx_endgame_fouls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_margin"
            android:text="@string/endGameFoulsChkbxText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_endgame_defense" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/endgame_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="save"
        app:srcCompat="@drawable/ic_baseline_check_24px" />

</FrameLayout>